Ajustes de maquetacion reviews y comments

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM_Sans:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -19,8 +21,7 @@ html {
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'DM_Sans', sans-serif;
   font-size: 1.6rem;
 }
 
@@ -329,8 +330,11 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   margin-top: 2rem;
   padding: 2rem;
+  gap: 2rem;
+  
 }
 
 
@@ -458,6 +462,10 @@ img {
 }
 
 /******filter*******/
+
+.nav__filter{
+  width: 15%;
+}
 
 .nav__filter-list {
   padding: 2rem;
@@ -751,7 +759,12 @@ img {
 
 
 .category__dropzone {
+  width: 100%;
   margin-top: 5rem;
+}
+
+.slider__section{
+  width: 100%;
 }
 
 
@@ -774,13 +787,14 @@ img {
   outline: none;
   caret-color: rgb(155, 78, 255);
   transition: all 300ms ease-in-out;
+  margin-top: 0.7rem;
 }
 
 .icon-svg {
   position: absolute;
   fill: rgb(155, 78, 255);
   width: 12px;
-  top: -23px;
+  top: -25px;
   left: -15px;
   opacity: 0;
   transition: .2s linear;
@@ -791,7 +805,7 @@ img {
   top: -25px;
   left: 5px;
   color: white;
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 400;
   font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   overflow: hidden;
@@ -822,8 +836,12 @@ img {
 }
 
 .category__button {
-  margin-top: 12rem;
-  margin-bottom: 2rem;
+  margin: 5rem 0;
+}
+
+.game__button{
+  display: flex;
+  gap: 3rem;
 }
 
 /***button***/
@@ -972,7 +990,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 4rem;
 }
 
 .category__game {
@@ -1063,7 +1081,6 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   padding-bottom: 2rem;
 
 }
@@ -1110,7 +1127,7 @@ img {
 .game__card-price {
   font-size: 1.5rem;
   font-weight: 600;
-  color: #fff;
+  color: #000;
 }
 
 .game__card-descuento {
@@ -1131,6 +1148,10 @@ img {
   align-items: center;
   width: 100%;
   margin-top: 2rem;
+}
+
+.game__view-plataforma{
+  margin-left: 2rem;
 }
 
 .game__card-description {
@@ -1155,25 +1176,24 @@ img {
 /******game view*****/
 
 .detalle-games__view {
-  width: 75%;
+  width: 100%;
   margin: 0 auto;
 }
 
+.game__view-section {
+  position: relative;
+}
+
 .game__view {
-  display: flex;
-  flex-direction: row;
-  padding: 2rem;
-  align-items: start;
-  justify-content: center;
+  position: relative;
   width: 100%;
+  height: 920px;
+  box-shadow: -11px 15px 32px #000000;
 }
 
 .game__view--left {
-  margin-right: 4rem;
-  margin-left: 8rem;
-  padding: 2rem;
-  height: 600px;
-  perspective: 500px;
+  height: 900px;
+  margin-left: 10%;
 }
 
 .game__view-img {
@@ -1181,18 +1201,60 @@ img {
   height: 100%;
   transition: all 300ms ease-in-out;
   cursor: pointer;
+
 }
 
 .game__view-img-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 15px;
+  object-fit: fill;
+  filter: drop-shadow(-20px 5px 40px #000000);
 }
 
+.game__view-img-linear {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(80deg, #1F1F1F 18%, rgba(10, 10, 10, 0.3) 40%);
+  pointer-events: none;
+  z-index: 9;
+}
+
+.game__view--linear{
+  position: relative;
+  width: 900px;
+}
+
+
+.game__view-img-linear-2 {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(7deg, rgba(31, 31, 31, 0.98) 22%, rgba(135, 133, 150, 0) 40%);
+  pointer-events: none;
+}
+
+.game__view-img-linear-3 {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(-20deg, rgba(31, 31, 31, 0.98) 22%, rgba(135, 133, 150, 0) 40%);
+  pointer-events: none;
+}
+
+/*
 .game__view-img:hover {
   transform: translateZ(10px) rotateX(10deg) rotateY(10deg) scale(1.1);
-}
+}*/
 
 .game__view-title {
   font-size: 3rem;
@@ -1209,12 +1271,12 @@ img {
 }
 
 .game__view-right {
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 100%;
   padding: 4rem;
-}
-
-.game__view-body {
-  width: 80%;
+  z-index: 100;
 }
 
 .game__view-category-container {
@@ -1222,9 +1284,17 @@ img {
   width: 100%;
 }
 
+.game__view-plataforma-container{
+  margin-top: 2rem;
+  margin-right: 2rem;
+}
+
 .game__view-body {
   display: flex;
   flex-direction: column;
+  color : #fff;
+  width: 80%;
+  margin-top: 2rem;
   gap: 2rem;
 }
 
@@ -1256,7 +1326,9 @@ img {
 
 
 .game__view-body-description {
-  width: 100%;
+  width: 70%;
+  color : #fff;
+  margin-top: 2rem;
 }
 
 .game__view-description {
@@ -1271,6 +1343,8 @@ img {
   flex-direction: column;
   padding: 4rem;
   overflow-x: auto;
+  align-items: center;
+  width: 100%;
 }
 
 .slider__content {
@@ -1281,13 +1355,15 @@ img {
 }
 
 .slider__bg {
-  background-color: lightgray;
+  height: 400px;
+  width: 100%;
   padding: 1rem;
+  background-color: lightgray;
   border-radius: 10px;
   padding-bottom: 3rem;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 400px;
+
 }
 
 .slider__dnd {
@@ -1375,6 +1451,7 @@ img {
   margin-right: 4rem;
   margin-left: 8rem;
   padding: 2rem;
+  margin-top: 5rem;
 }
 
 .reviews__info {
@@ -1424,7 +1501,11 @@ img {
   align-items: center;
   justify-content: start;
   gap: 1rem;
+}
 
+.rating__container{
+  display: flex;
+  gap: 2rem;
 }
 
 .star {
@@ -1583,6 +1664,7 @@ img {
 
 .shopping__list-header-text-title {
   font-size: 2.5rem;
+  font-weight: 600;
 }
 
 .shopping__list-header-text-close {
@@ -1773,12 +1855,13 @@ img {
   display: flex;
   flex-direction: row;
   margin: 1rem 0;
-  background-color: #fcfcfc;
   height: 150px;
   margin-top: 2rem;
   margin-bottom: 2rem;
   padding: 1rem;
   justify-content: space-between;
+  background-color: #fcfcfc;
+  
 }
 
 .shopping__cart-games-item-img {
@@ -1797,10 +1880,12 @@ img {
 .shopping__cart-games-item-name {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .shopping__cart-games-item-name-title {
   margin: 1rem 1rem;
+  text-transform: uppercase;
 }
 
 .shopping__cart-games-item-name-price,
@@ -1831,6 +1916,15 @@ img {
   box-shadow: 0 0 4px -1px;
 }
 
+.shopping__cart-totales-subtotal-price,
+.shopping__cart-method-pay-title{
+  font-weight: 600;
+}
+
+.shopping__cart-method-pay-title{
+  margin-left: 1.5rem;
+}
+
 .shopping__cart-pay-title {
   color: white;
   font-size: 1.5rem;
@@ -1845,6 +1939,14 @@ img {
 
 .shopping__cart-pay-title:hover {
   background-color: #0047fa;
+}
+
+.shopping__cart-pay--auth{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  overflow: hidden;
 }
 
 /**fade up**/
@@ -2185,4 +2287,209 @@ img {
   background-color: transparent;
   border-bottom: 3px solid #7e4fd4;
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+/***loading***/
+
+.loader__container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader {
+  width: 32px;
+  height: 90px;
+  display: block;
+  margin: 20px auto;
+  position: relative;
+  border-radius: 50% 50% 0 0;
+  border-bottom: 10px solid #FF3D00;
+  background-color: #FFF;
+  background-image: radial-gradient(ellipse at center, #FFF 34%, #FF3D00 35%, #FF3D00 54%, #FFF 55%), linear-gradient(#FF3D00 10px, transparent 0);
+  background-size: 28px 28px;
+  background-position: center 20px , center 2px;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  animation: animloaderBack 1s linear infinite alternate;
+}
+.loader::before {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 64px;
+  height: 44px;
+  border-radius: 50%;
+  box-shadow: 0px 15px #FF3D00 inset;
+  top: 67px;
+}
+.loader::after {
+  content: '';  
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  width: 34px;
+  height: 34px;
+  top: 112%;
+  background: radial-gradient(ellipse at center, #ffdf00 8%, rgba(249, 62, 0, 0.6) 24%, rgba(0, 0, 0, 0) 100%);
+  border-radius: 50% 50% 0;
+  background-repeat: no-repeat;
+  background-position: -44px -44px;
+  background-size: 100px 100px;
+  box-shadow: 4px 4px 12px 0px rgba(255, 61, 0, 0.5);
+  box-sizing: border-box;
+  animation: animloader 1s linear infinite alternate;
+}
+
+@keyframes animloaderBack {
+  0%, 30%, 70% {
+    transform: translateY(0px);
+  }
+  20%, 40%, 100% {
+    transform: translateY(-5px);
+  }
+}
+
+@keyframes animloader {
+  0% {
+    box-shadow: 4px 4px 12px 2px rgba(255, 61, 0, 0.75);
+    width: 34px;
+    height: 34px;
+    background-position: -44px -44px;
+    background-size: 100px 100px;
+  }
+  100% {
+    box-shadow: 2px 2px 8px 0px rgba(255, 61, 0, 0.5);
+    width: 30px;
+    height: 28px;
+    background-position: -36px -36px;
+    background-size: 80px 80px;
+  }
+}
+
+
+/***Auth***/
+
+.Auth__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'DM_Sans', sans-serif;
+  font-size: 1.6rem;
+}
+
+.auth__header{
+  padding: 30px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  background-color: #fff;
+  text-align: center;
+  color: black;
+}
+
+.auth__title{
+  margin-bottom: 2rem;
+}
+
+.auth__auth_bottom{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.auth__buttom{
+  padding: '10px 20px';
+  background-color: '#dc3545';
+  color: 'white';
+  border: 'none';
+  border-radius: '5px';
+  cursor: 'pointer';
+  font-size: '16px';
+  margin-top: '20px';
+}
+
+.auth__auth-auth{
+  color: blue;
+  margin-top: 15px;
+}
+
+.auth__auth-error{
+  color: red;
+  margin-top: 15px;
+}
+
+.auth__auth-loading{
+  color: gray;
+  margin-top: 15px;
+}
+
+.auth__close{
+  padding: 10px 20px;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+/***Login***/
+
+.div__login {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+}
+
+.login__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'DM_Sans', sans-serif;
+  font-size: 1.6rem;
+}
+
+.login__header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.login__logout {
+  position: absolute;
+  top: 20px;
+  left: -20px;
+  padding: 10px 20px;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.login__login{
+  position: absolute;
+  top: 40px;
+  width: 100px;
+}
+
+.login__logout:hover {
+  transform: scale(1.1);
 }
