--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,23 @@ img {
   max-width: 100%;
 }
 
+.div__principal {
+  position: relative;
+}
+
+.div__content {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #121212;
+  top: 0;
+  left: 0;
+}
+
+.title__color--title {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
 .div__section {
   width: 100%;
   height: 100%;
@@ -334,7 +351,11 @@ img {
   margin-top: 2rem;
   padding: 2rem;
   gap: 2rem;
-  
+
+}
+
+.games__crear{
+  padding: 4rem 2rem;
 }
 
 
@@ -463,7 +484,7 @@ img {
 
 /******filter*******/
 
-.nav__filter{
+.nav__filter {
   width: 15%;
 }
 
@@ -482,6 +503,11 @@ img {
   font-size: 1.8rem;
   margin-left: 5px;
   width: 150px;
+}
+
+.nav__filter-text {
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .arrow {
@@ -763,7 +789,7 @@ img {
   margin-top: 5rem;
 }
 
-.slider__section{
+.slider__section {
   width: 100%;
 }
 
@@ -839,7 +865,7 @@ img {
   margin: 5rem 0;
 }
 
-.game__button{
+.game__button {
   display: flex;
   gap: 3rem;
 }
@@ -980,7 +1006,7 @@ img {
 }
 
 .game__section {
-  margin-top: 6rem;
+  /*margin-top: 6rem;*/
 }
 
 
@@ -1013,7 +1039,7 @@ img {
 .list__games {}
 
 .game__games-content {
-  padding: 3rem;
+  /* padding: 3rem; */
 }
 
 .category__form-crear {
@@ -1081,8 +1107,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 2rem;
-
+  padding: 4rem 2rem;
 }
 
 /******card******/
@@ -1150,7 +1175,7 @@ img {
   margin-top: 2rem;
 }
 
-.game__view-plataforma{
+.game__view-plataforma {
   margin-left: 2rem;
 }
 
@@ -1223,7 +1248,7 @@ img {
   z-index: 9;
 }
 
-.game__view--linear{
+.game__view--linear {
   position: relative;
   width: 900px;
 }
@@ -1284,7 +1309,7 @@ img {
   width: 100%;
 }
 
-.game__view-plataforma-container{
+.game__view-plataforma-container {
   margin-top: 2rem;
   margin-right: 2rem;
 }
@@ -1292,7 +1317,7 @@ img {
 .game__view-body {
   display: flex;
   flex-direction: column;
-  color : #fff;
+  color: #fff;
   width: 80%;
   margin-top: 2rem;
   gap: 2rem;
@@ -1327,7 +1352,7 @@ img {
 
 .game__view-body-description {
   width: 70%;
-  color : #fff;
+  color: #fff;
   margin-top: 2rem;
 }
 
@@ -1503,7 +1528,7 @@ img {
   gap: 1rem;
 }
 
-.rating__container{
+.rating__container {
   display: flex;
   gap: 2rem;
 }
@@ -1603,9 +1628,7 @@ img {
 
 }
 
-.shopping__detail {
-
-}
+.shopping__detail {}
 
 .shopping__over {
   position: fixed;
@@ -1861,7 +1884,7 @@ img {
   padding: 1rem;
   justify-content: space-between;
   background-color: #fcfcfc;
-  
+
 }
 
 .shopping__cart-games-item-img {
@@ -1917,11 +1940,11 @@ img {
 }
 
 .shopping__cart-totales-subtotal-price,
-.shopping__cart-method-pay-title{
+.shopping__cart-method-pay-title {
   font-weight: 600;
 }
 
-.shopping__cart-method-pay-title{
+.shopping__cart-method-pay-title {
   margin-left: 1.5rem;
 }
 
@@ -1941,7 +1964,7 @@ img {
   background-color: #0047fa;
 }
 
-.shopping__cart-pay--auth{
+.shopping__cart-pay--auth {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1994,7 +2017,7 @@ img {
   height: 180px;
 }
 
-.my-custom-skeleton-card-flex{
+.my-custom-skeleton-card-flex {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -2240,9 +2263,9 @@ img {
 /***iconos***/
 
 .custom-icon {
- color: #676363;
- transition: all 0.3s;
- cursor: pointer;
+  color: #676363;
+  transition: all 0.3s;
+  cursor: pointer;
 }
 
 .custom-icon:hover {
@@ -2299,7 +2322,7 @@ img {
   transition: .2s linear;
 }
 
-.icon__search:focus ~ .input,
+.icon__search:focus~.input,
 .input:focus {
   box-shadow: none;
   width: 250px;
@@ -2311,13 +2334,14 @@ img {
 
 /***loading***/
 
-.loader__container{
+.loader__container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Fondo semitransparente */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2335,13 +2359,14 @@ img {
   background-color: #FFF;
   background-image: radial-gradient(ellipse at center, #FFF 34%, #FF3D00 35%, #FF3D00 54%, #FFF 55%), linear-gradient(#FF3D00 10px, transparent 0);
   background-size: 28px 28px;
-  background-position: center 20px , center 2px;
+  background-position: center 20px, center 2px;
   background-repeat: no-repeat;
   box-sizing: border-box;
   animation: animloaderBack 1s linear infinite alternate;
 }
+
 .loader::before {
-  content: '';  
+  content: '';
   box-sizing: border-box;
   position: absolute;
   left: 50%;
@@ -2352,8 +2377,9 @@ img {
   box-shadow: 0px 15px #FF3D00 inset;
   top: 67px;
 }
+
 .loader::after {
-  content: '';  
+  content: '';
   position: absolute;
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
@@ -2371,10 +2397,16 @@ img {
 }
 
 @keyframes animloaderBack {
-  0%, 30%, 70% {
+
+  0%,
+  30%,
+  70% {
     transform: translateY(0px);
   }
-  20%, 40%, 100% {
+
+  20%,
+  40%,
+  100% {
     transform: translateY(-5px);
   }
 }
@@ -2387,6 +2419,7 @@ img {
     background-position: -44px -44px;
     background-size: 100px 100px;
   }
+
   100% {
     box-shadow: 2px 2px 8px 0px rgba(255, 61, 0, 0.5);
     width: 30px;
@@ -2408,26 +2441,26 @@ img {
   font-size: 1.6rem;
 }
 
-.auth__header{
+.auth__header {
   padding: 30px;
   border: 1px solid #ddd;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   text-align: center;
   color: black;
 }
 
-.auth__title{
+.auth__title {
   margin-bottom: 2rem;
 }
 
-.auth__auth_bottom{
+.auth__auth_bottom {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.auth__buttom{
+.auth__buttom {
   padding: '10px 20px';
   background-color: '#dc3545';
   color: 'white';
@@ -2438,22 +2471,22 @@ img {
   margin-top: '20px';
 }
 
-.auth__auth-auth{
+.auth__auth-auth {
   color: blue;
   margin-top: 15px;
 }
 
-.auth__auth-error{
+.auth__auth-error {
   color: red;
   margin-top: 15px;
 }
 
-.auth__auth-loading{
+.auth__auth-loading {
   color: gray;
   margin-top: 15px;
 }
 
-.auth__close{
+.auth__close {
   padding: 10px 20px;
   background-color: #dc3545;
   color: white;
@@ -2504,7 +2537,7 @@ img {
   margin-top: 20px;
 }
 
-.login__login{
+.login__login {
   position: absolute;
   top: 40px;
   width: 100px;
@@ -2514,13 +2547,13 @@ img {
   transform: scale(1.1);
 }
 
-.login__img{
+.login__img {
   width: 50px;
   height: 50px;
   cursor: pointer;
 }
 
-.login__img-img{
+.login__img-img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -2528,19 +2561,19 @@ img {
 
 /***historial***/
 
-.historial__header{
+.historial__header {
   display: flex;
   flex-direction: row;
-  
+
   justify-content: center;
   margin-bottom: 4rem;
 }
 
-.historial__container{
+.historial__container {
   padding: 4rem 6rem;
 }
 
-.historial__content{	
+.historial__content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -2549,13 +2582,13 @@ img {
   margin-top: 6rem;
 }
 
-.historial__card-header{
+.historial__card-header {
   display: flex;
   flex-direction: row;
   gap: 2rem;
 }
 
-.historial__card{
+.historial__card {
   display: flex;
   flex-direction: column;
   width: 60%;
@@ -2565,30 +2598,31 @@ img {
   gap: 3rem;
 }
 
-.historial__card-body-img-img{
+.historial__card-body-img-img {
   width: 200px;
   height: 150px;
   border-radius: 10px;
 }
 
-.historial__card-body-title{
+.historial__card-body-title {
   display: flex;
   gap: 1rem;
 }
 
-.historial_title{
+.historial_title {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 2rem;
 }
 
-.historial__card-body-text, .historial__card-body-descuento{
+.historial__card-body-text,
+.historial__card-body-descuento {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
 }
 
-.historial-title{
+.historial-title {
   font-weight: normal;
 }
